<resources>
    <string name="app_name">Space Launch 1</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_details">Launch Details</string>
    <string name="title_activity_credits">About</string>
    <string name="title_activity_history">Past Launches</string>
    <string name="title_activity_search">Search Launches</string>
    <string name="title_activity_filters">Apply Filters</string>
    <plurals name="years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <plurals name="months">
        <item quantity="other">%d mth</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="other">%d min</item>
    </plurals>
    <plurals name="seconds">
        <item quantity="other">%d s</item>
    </plurals>
    <plurals name="mission_no">
        <item quantity="one">Mission%s: %s</item>
        <item quantity="other">Mission %s: %s</item>
    </plurals>
    <plurals name="video_label">
        <item quantity="one">%d video</item>
        <item quantity="other">%d videos</item>
    </plurals>
    <plurals name="document_label">
        <item quantity="other">Learn more on Wikipedia</item>
    </plurals>
    <plurals name="tab_pads">
        <item quantity="other">pads</item>
    </plurals>
    <plurals name="tab_launches">
        <item quantity="other">launches</item>
    </plurals>
    <plurals name="tab_agencies">
        <item quantity="other">agencies</item>
    </plurals>
    <plurals name="tab_missions">
        <item quantity="other">missions</item>
    </plurals>
    <plurals name="many_countries">
        <item quantity="other">%d countries</item>
    </plurals>
    <string-array name="pref_sync_frequency_titles">
        <item>every 1 hour</item>
        <item>every 6 hours</item>
        <item>every 12 hours</item>
        <item>every 24 hours</item>
        <item>every 48 hours</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
        <item>48</item>
    </string-array>
    <string-array name="credits_array">
        <item>What is Space Launch 1? ; Initially I created this app as a capstone project for Udacity Android
            developer nanodegree program. Since then it has become a standalone resource for
            tracking space flights. This application is open source and available on Github.
            You are invited to contribute to the improvement of this app.
            &lt;br/>&lt;br/>Application data is provided and maintained by the Space Devs.
            They continuously work on updating the data and share this resource with the world for free.
            If you appreciate the effort and wish to see it continue, consider supporting the Space Devs.
        </item>
        <item>App Developer ; Neea Rusch (USA)</item>
        <item>Source Code ; &lt;a href="https://github.com/nkrusch/SpaceLaunchOne">Space Launch 1 on Github&lt;/a></item>
        <item>Beta Version; &lt;a href="{beta_URL}">Join beta program to get early updates&lt;a></item>
        <item><![CDATA[Rate this app ; <a href="{rate_URL}">Continue to app rating…</a>]]></item>
        <item>Application Data ; &lt;a href="https://thespacedevs.com/llapi">The Space Devs, Launch Library 2 API&lt;/a></item>
        <item>Image Credits ; &lt;a href="https://thespacedevs.com/llapi">Launch Library 2 &lt;/a>&lt;br/>
            &lt;a href="https://www.nasa.gov/multimedia/imagegallery/iotd.html">NASA image of the day&lt;/a></item>
        <item>Maps ; &lt;a href="https://developers.google.com/maps/documentation/android-sdk/intro">Google Maps&lt;/a></item>
    </string-array>
    <string-array name="credits_array_amazon">
        <item>What is Space Launch 1? ; Initially I created this app as a capstone project for Udacity Android
            developer nanodegree program. Since then it has become a standalone resource for
            tracking space flights. This application is open source and available on Github.
            You are invited to contribute to the improvement of this app.
            &lt;br/>&lt;br/>Application data is provided and maintained by the Space Devs.
            They continuously work on updating the data and share this resource with the world for free.
            If you appreciate the effort and wish to see it continue, consider supporting the Space Devs.
        </item>
        <item>App Developer ; Neea Rusch (USA)</item>
        <item>Source Code ; &lt;a href="https://github.com/nkrusch/SpaceLaunchOne">Space Launch 1 on Github&lt;/a></item>
        <item>Rate this app ; &lt;a href="{rate_URL}">Continue to app rating…&lt;/a></item>
        <item>Application Data ; &lt;a href="https://thespacedevs.com/llapi">The Space Devs, Launch Library 2 API&lt;/a></item>
        <item>Image Credits ; &lt;a href="https://thespacedevs.com/llapi">Launch Library 2 &lt;/a>&lt;br/>
            &lt;a href="https://www.nasa.gov/multimedia/imagegallery/iotd.html">NASA image of the day&lt;/a></item>
        <item>Maps ; &lt;a href="https://developers.google.com/maps/documentation/android-sdk/intro">Google Maps&lt;/a></item>
    </string-array>
    <string name="sec">sec</string>
    <string name="min">min</string>
    <string name="hour">hour</string>
    <string name="day">day</string>
    <string name="blastoff">blastoff</string>
    <string name="pref_title_sync_frequency">Update application data</string>
    <string name="sync_frequency">Sync frequency</string>
    <string name="dataset_last_sync" translatable="false">last_sync_timestamp</string>
    <string name="pref_immediate_sync">Update app data now</string>
    <string name="pref_about_label">About this app…</string>
    <string name="pref_timezone">Your Timezone</string>
    <string name="pref_timezone_key" translatable="false">user_local_timezone</string>
</resources>