<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Preferences">
        <ListPreference
            android:defaultValue="24"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:icon="@drawable/ic_av_timer"
            android:key="@string/sync_frequency"
            android:title="@string/pref_title_sync_frequency" />
        <PreferenceScreen
            android:icon="@drawable/ic_sync"
            android:key="@string/dataset_last_sync"
            android:summary="synchronize immediately"
            android:title="@string/pref_immediate_sync" />
        <ListPreference
            android:defaultValue="UTC"
            android:entries="@array/pref_timezones"
            android:entryValues="@array/pref_timezones"
            android:icon="@drawable/ic_earth"
            android:summary=""
            android:key="@string/pref_timezone_key"
            android:title="@string/pref_timezone" />
        <PreferenceScreen
            android:icon="@drawable/ic_filter"
            android:key="prefs_feedback_screen"
            android:title="@string/title_activity_filters">
            <intent
                android:targetClass="io.github.nkrusch.spacelaunchone.features.filters.FilterActivity"
                android:targetPackage="io.github.nkrusch.spacelaunchone" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="Information">
        <Preference
            android:icon="@drawable/ic_information_outline"
            android:title="@string/pref_about_label">
            <intent
                android:targetClass="io.github.nkrusch.spacelaunchone.features.settings.CreditsActivity"
                android:targetPackage="io.github.nkrusch.spacelaunchone" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
